; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_event.c_libvlc_event_manager_destroy.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_event.c_libvlc_event_manager_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libvlc_event_manager_destroy(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = call i32 @vlc_mutex_destroy(i32* %5)
  store i64 0, i64* %3, align 8
  br label %7

7:                                                ; preds = %19, %1
  %8 = load i64, i64* %3, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i64 @vlc_array_count(i32* %10)
  %12 = icmp ult i64 %8, %11
  br i1 %12, label %13, label %22

13:                                               ; preds = %7
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i64, i64* %3, align 8
  %17 = call i32 @vlc_array_item_at_index(i32* %15, i64 %16)
  %18 = call i32 @free(i32 %17)
  br label %19

19:                                               ; preds = %13
  %20 = load i64, i64* %3, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %3, align 8
  br label %7

22:                                               ; preds = %7
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = call i32 @vlc_array_clear(i32* %24)
  ret void
}

declare dso_local i32 @vlc_mutex_destroy(i32*) #1

declare dso_local i64 @vlc_array_count(i32*) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @vlc_array_item_at_index(i32*, i64) #1

declare dso_local i32 @vlc_array_clear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
